# ego

./: .gitignore  CMakeLists.txt  README.md  llvm-mingw-toolchain.cmake
ego/: Conv.cpp  Conv.h  Linear.cpp  Linear.h  Module.cpp  Module.h  ReLU.cpp  ReLU.h  Sigmoid.cpp  Sigmoid.h  Softmax.cpp  Softmax.h  Tensor.cpp  Tensor.h  main.cpp  random.cpp  random.h
example/: test_CBR.cpp  test_TBB.cpp  test_Tensor.cpp
